fix: 1.13: settings style alignment + spacing

--- a/src/Styles/settings.css
+++ b/src/Styles/settings.css
@@ -4,10 +4,7 @@
 .note-toolbar-setting-ui, .note-toolbar-setting-modal-container {
     & .setting-group {
         & .setting-items {
-            .is-mobile & {
-                /* fix: this padding is missing in Obsidian 1.13 */
-                padding: var(--size-4-5);
-            }
+            padding: var(--size-4-5);
             &:focus-within {
                 box-shadow: inset 0 0 0 2px var(--background-modifier-border-focus);
             }
@@ -411,6 +408,7 @@
             gap: 0.25em;
             width: 100%;
             & .setting-item {
+                align-items: center;
                 /* box-shadow: blue 0px 0px 0px 1px !important; */
                 border-top: none;
                 border: dashed 1px var(--pill-color-remove);
@@ -423,7 +421,6 @@
                 height: var(--input-height);
                 .is-mobile & {
                     flex-direction: row;
-                    align-items: center;
                 }
                 &:first-child {
                     border: dashed 1px var(--pill-color-remove);
